# LibRootIVAnalysis

./: .gitignore  CMakeLists.txt  README.md  RootIVAnalyser.sln
CSharpTest/: FileWriter.cs  Program.cs  RootIVAnalyser.cs
include/: AnalysisProperties.hpp  AnalysisTypes.hpp  Derivate.hpp  IVAnalyser.hpp  Plot.hpp  RelativeDerivativeAnalysis.hpp  RootIVAnalyser.hpp  SavitzkyGolayFilter.hpp  SiPMData.hpp  ThirdDerivativeAnalysis.hpp
source/: IVAnalyser.cpp  RootIVAnalyser.cpp
